# xmum-scheduler

./: .gitignore  202604 Semester Timetable.html  CHANGELOG.md  PLAN.md  README.md  dev.mjs  improvements.md  index.html  package-lock.json  package.json  server.mjs  vite.config.ts
.github/workflows/: publish.yml
scripts/: dev.mjs
src/: App.tsx  MilkdownEditor.tsx  main.tsx  milkdown.css  styles.css  styles_onboarding.css  toast-ui-calendar.d.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src/components/: Avatar.tsx  AvatarPickerModal.tsx  ChatPanel.tsx  Field.tsx  InteractiveTour.tsx  Sidebar.tsx  SubjectFileEditor.tsx  Topbar.tsx
src/hooks/: useDebounce.ts  usePersistentState.ts  useToast.tsx
src/lib/: aiActions.ts  aiContext.ts  api.ts  googleCalendar.ts  semester.ts  subjectFile.ts  utils.ts
src/pages/: AssignmentsPage.tsx  CalendarPage.tsx  Dashboard.tsx  ExamsPage.tsx  KnowledgePage.tsx  MoodlePage.tsx  Onboarding.tsx  SettingsPage.tsx
